Fix text align on about page

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -250,6 +250,14 @@ body a {
   align-items: center;
 }
 
+.about-info {
+  margin: 0px 10%;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+}
+
+
 .index-info img {
   margin-top: 10px;
   width: 60%;
